[tool.poetry]
name = "docker-images"
version = "0.1.0"
description = ""
authors = ["chefbc <chefbc@icloud.com>"]
readme = "README.md"
packages = [{include = "docker_images"}]

[tool.poetry.dependencies]
python = "^3.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
